--- a/src-capacitor/android/app/src/main/assets/other/index.html
+++ b/src-capacitor/android/app/src/main/assets/other/index.html
@@ -19,6 +19,7 @@ HiveAuthSigner
 <script src="https://cdn.jsdelivr.net/npm/@hiveio/hive-js@2.0.7/dist/hive.min.js"></script>
 <script>
     function getProofOfKey(privateKey, publicKey, memo) {
+      console.log("In Here - in getProofOfKey of another html");
       const proofOfKey = hive.memo.encode(privateKey, publicKey, `#${memo}`);
       replyToNative({
         type: "getProofOfKey",
