--- a/src-capacitor/android/app/src/main/assets/other/index.html
+++ b/src-capacitor/android/app/src/main/assets/other/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HiveAuthSigner</title>
+    <title>HiveAuth App</title>
   </head>
   <body>
-    HiveAuthSigner
+    HiveAuth App
   </body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.1.0/uuidv4.min.js"></script>
